# VINdicated

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
apps/api/: Cargo.toml
apps/api/src/: cache.rs  config.rs  error.rs  main.rs
apps/api/src/models/: mod.rs
apps/api/src/routes/: health.rs  mod.rs  vin.rs
apps/api/src/sources/: mod.rs
apps/api/src/sources/tier_a/: es_dgt.rs  hr_hak.rs  is_samgongustofa.rs  it_aci.rs  lt_regitra.rs  mod.rs
apps/api/src/sources/tier_b/: bg_mobile.rs  de_kba.rs  fr_histovec.rs  mod.rs
apps/api/src/sources/tier_s/: cz_kontrolatachometru.rs  dk_dmr.rs  ee_transpordiamet.rs  lv_csdd.rs  mod.rs  nl_rdw.rs  no_vegvesen.rs  pl_historiapojazdu.rs  se_transportstyrelsen.rs  si_avtolog.rs  sk_stkonline.rs  ua_hsc.rs  uk_dvla.rs  uk_dvsa_mot.rs
apps/api/src/sources/universal/: eu_safety_gate.rs  mod.rs  nhtsa_recalls.rs  nhtsa_vpic.rs
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/report/[vin]/: page.tsx
apps/web/src/components/: country-coverage.tsx  vin-search-form.tsx
apps/web/src/lib/: api.ts
apps/web/src/types/: report.ts
docker/: Dockerfile.api
nginx/: default.conf
