[package]
name = "vindicate-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vindicate-api"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true }
futures = { workspace = true }
